# barrel-reaper

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  prettier.config.mjs  tsconfig.json
.github/workflows/: test.yml
src/: ast.ts  cli.ts  exports.rs  exports.ts  formatter.ts  imports.rs  imports.ts  lib.rs  logo.ts  main.rs  path.rs  path.ts  prompt.ts  reaper.rs  reaper.ts  repl.ts  resolver.rs  resolver.ts  spinner.ts  std.ts  types.ts
src/cli/: headless.rs  mod.rs
test/: reaper.test.ts  resolver.test.ts  setup.ts
test/fixtures/barrel/: index.ts  module-a.ts  module-b.ts  module-enum.ts
test/fixtures/mock/: index.expected  index.ts
tests/: cli_args.rs  cli_headless.rs  reaper.rs  stress.rs
tests/fixtures/chained/consumer/: consumer.expected  consumer.ts
tests/fixtures/full-suite/: tsconfig.json
tests/fixtures/full-suite/via-alias/: consumer.expected  consumer.ts
tests/fixtures/full-suite/via-relative/: consumer.expected  consumer.ts
tests/fixtures/mixed/barrel/: a.ts  b.ts  index.ts
tests/fixtures/mixed/consumer/: consumer.expected  consumer.ts
tests/fixtures/nested-reexports/barrel/: index.ts
tests/fixtures/nested-reexports/shared/: utils.ts
tests/fixtures/nested-reexports/via-alias/: consumer.expected  consumer.ts
tests/fixtures/nested-reexports/via-relative/: consumer.expected  consumer.ts
tests/fixtures/unresolvable-source/barrel/: index.ts
tests/fixtures/unresolvable-source/consumer/: consumer.ts
tests/fixtures/unresolved/consumer/: consumer.ts
tests/fixtures/unresolved/consumer-partial/: consumer.ts
(+6 files in other folders)
